# PJAText2

./: .gitignore  CMakeLists.txt  README.md  counters.cpp  counters.h  global.h  main.cpp  test.txt  test_input.txt
collectors/: anagrams_collector.cpp  anagrams_collector.h  collector.h  palindromes_collector.cpp  palindromes_collector.h  passed_words_collector.cpp  passed_words_collector.h  path_collector.cpp  path_collector.h
counters/: counters.cpp  counters.h
custom_containers/: argument_container.cpp  argument_container.h  argument_container.tpp  arguments_container.h  container.cpp  container.h  container.tpp  enhanced_vector.cpp  enhanced_vector.h  enhanced_vector.tpp
data/: help_sheet.txt
global/: global_aliases.h  global_variables.h
include/stream/: stream_helper.h  stream_helper.tpp
include/utils/: check_arguments_correctness.h  run_function.h  utility_functions.h  utility_functions.tpp
include/wrappers/: arguments_wrapper.h  arguments_wrapper.tpp  input_data_wrapper.h  input_data_wrapper.tpp
inputs/: flag_properties.txt
src/utils/: check_arguments_correctness.cpp  run_function.cpp  utility_functions.cpp
src/wrappers/: arguments_wrapper.cpp  input_data_wrapper.cpp
text_files/: flag_properties.txt
tools/include/collectors/: anagrams_collector.h  palindromes_collector.h  path_collector.h  words_collector.h
tools/include/counters/: char_counter.h  digit_counter.h  number_counter.h
tools/src/collectors/: anagrams_collector.cpp  palindromes_collector.cpp  path_collector.cpp  words_collector.cpp
tools/src/counters/: char_counter.cpp  digit_counter.cpp  number_counter.cpp
utils/: check_arguments_correctness.cpp  check_arguments_correctness.h  invoke_functions.cpp  invoke_functions.h  stream_helper.h  stream_helper.tpp  utility_functions.cpp  utility_functions.h  utility_functions.tpp
wrappers/: arguments_wrapper.cpp  arguments_wrapper.h  arguments_wrapper.tpp  input_data_wrapper.cpp  input_data_wrapper.h  input_data_wrapper.tpp
